# Search-Engine

./: .gitignore  CMakeLists.txt  main.cpp
data/: file1.txt
include/: parser.h  search.h  trie.h  utils.h
src/: parsers.cpp  search.cpp  trie.cpp  utils.cpp
